---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: ???
  Features:
    - Clearing search (with right-click) now clears results
  Bugfixes:
    - Fixed crash when 'Signal' search mode encounters a modded constant combinator with `item_slot_count = 0` (no signal slots)
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 17 April 2022
  Bugfixes:
    - Fixed crash when selecting 'Unknown signal' in 'Signal' search mode or with certain other mods (e.g. Miniloaders)
  Locale:
    - Added complete Russion translations (thanks Shadow_Man on Crowdin!)
    - Added complete Korean translations (thanks x2605 on Crowdin!)
    - Added some Swedish translations (thanks Fewlike on Crowdin!)
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 8 April 2022
  Features:
    - 'Control + Shift + Click' on any ingame object (e.g. an item in your inventory) to open it in Factory Search
    - Added 'Request' search option to search for logistic containers requesting the item
    - Added scroll bar that appears when the search results are too long to fit on the screen
  Changes:
    - Changed search option names to be more consistent
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 8 April 2022
  Features:
    - Added 'Entities' search option to search for built entities of that item
    - Added 'Ground' search option to search for the item on the ground
    - Added 'Signals' search option to search for entities emitting that signal (mod API is limited so doesn't support all entities)
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 7 April 2022
  Bugfixes:
    - Fixed not showing results from all planets if some planets had no results