@@ -2,6 +2,8 @@
 Version: 1.3.2
 Date: ???
   Features:
+    - Added recipes used to tooltips of 'Product' results
+    - Added total item/fluid count to tooltips of 'Storage' results
     - Clearing search (with right-click) now clears results
   Bugfixes:
     - Fixed crash when 'Signal' search mode encounters a modded constant combinator with `item_slot_count = 0` (no signal slots)
